# emails

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  default.nix  flake.nix  renovate.json  rust-toolchain.toml  rustfmt.toml  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: CI.yaml  Release.yaml  RustCI.yaml
distribution/archives/: tar.sh
distribution/config/: emails.yaml
distribution/docker/: alpine.Dockerfile  debian.Dockerfile
distribution/docker/alpine/: Dockerfile
distribution/docker/config/: emails.yaml
distribution/docker/debian/: Dockerfile
distribution/docker/scripts/: docker-entrypoint.sh  liblog.sh
distribution/helm/: .charted.yaml  Chart.yaml  README.md
distribution/helm/templates/: _helpers.tpl  service.yaml
protos/: emails.proto
src/: config.rs  error.rs  lib.rs  main.rs  service.rs  setup_utils.rs  template_engine.rs  templates.rs
src/config/: logging.rs  macros.rs  mod.rs  server.rs  smtp.rs
src/config/merge/: mod.rs  strategy.rs
src/logging/: logstash.rs  mod.rs  visitor.rs
src/templates/: resolver.rs
src/templates/resolver/: filesystem.rs  git.rs  kubernetes.rs
template_builder/: .gitkeep
