# 🐻‍❄️💌 email-service: charted's email service built in Rust that can be connected via gRPC
# Copyright 2023 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "emails"
description = "🐻‍❄️💌 charted's email service built in Rust that can be connected via gRPC"
homepage = "https://charts.noelware.org/docs/services/emails/latest"
version = "0.1.1"
edition = "2021"
authors = ["Noel Miko <cutie@floofy.dev>", "Noelware Team <team@noelware.org>"]
license = "Apache-2.0"

[dependencies]
ansi_term = "0.12.1"
async-trait = "0.1.73"
chrono = { version = "0.4.30", features = ["serde"] }
dotenv = "0.15.0"
fern = "0.6.2"
futures = { version = "0.3.28", default-features = false, features = ["std"] }
futures-util = "0.3.28"
lazy_static = "1.4.0"
lettre = { version = "0.10.4", features = ["tracing", "hostname", "tokio1-native-tls", "tokio1"] }
log = "0.4.20"
mustache = "0.9.0"
once_cell = "1.18.0"
prost = "0.11.9"
prost-types = "0.11.9"
regex = "1.9.5"
sentry = { version = "0.31.6", features = ["backtrace", "log", "panic", "tracing"] }
sentry-log = "0.31.6"
sentry-tower = "0.31.6"
sentry-tracing = "0.31.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.8.3"
tonic-health = "0.8.0"

[build-dependencies]
chrono = "0.4.30"
tonic-build = "0.8.4"

[[bin]]
path = "src/main.rs"
name = "emails"

[profile.release]
strip = true
opt-level = "z"
lto = true
