# 🐻‍❄️💌 email-service: charted's email service built in Rust that can be connected via gRPC
# Copyright 2023 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-emails"
description = "🐻‍❄️💌 charted's email service built in Rust that can be connected via gRPC"
homepage = "https://charts.noelware.org/docs/services/emails/latest"
version = "0.2.0"
edition = "2021"
authors = ["Noel Towa <cutie@floofy.dev>", "Noelware Team <team@noelware.org>"]
license = "Apache-2.0"

[dependencies]
async-trait = "0.1.74"
chrono = "0.4.31"
color-eyre = "0.6.2"
dotenv = "0.15.0"
eyre = "0.6.9"
git2 = "0.18.1"
k8s-openapi = { version = "0.20.0", features = ["v1_26"] }
kube = { version = "0.87.1", features = ["derive", "runtime"] }
lettre = { version = "0.11.1", features = ["tokio1", "tracing", "tokio1-native-tls"] }
mustache = "0.9.0"
once_cell = "1.18.0"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
prost = "0.12.3"
prost-types = "0.12.3"
regex = "1.10.2"
remi-core = "0.4.2"
remi-fs = { version = "0.4.2", features = ["serde", "log"] }
sentry = "0.31.8"
sentry-tower = "0.31.8"
sentry-tracing = "0.31.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["full"] }
tonic = { version = "0.10.2", features = ["tls"] }
tonic-health = "0.10.2"
tonic-reflection = "0.10.2"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
url = "2.4.1"

[build-dependencies]
chrono = "0.4.31"
rustc_version = "0.4.0"
tonic-build = "0.10.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
